Migrasi Menu Grafik QCF dan News Line

--- a/.htaccess
+++ b/.htaccess
@@ -163,6 +163,7 @@ RewriteRule ^EditNCPLamaTerima$ ./index1.php?p=Edit_Ncp_Lama_Terima [L]
 RewriteRule ^EditStatusMesin$ ./index1.php?p=Status_Mesin_Edit [L]
 RewriteRule ^EditSchedule$ ./index1.php?p=Edit_Schedule [L]
 RewriteRule ^EditNews$ ./index1.php?p=Edit_News [L]
+RewriteRule ^EditGambar$ ./index1.php?p=Edit_Gambar [L]
 RewriteRule ^EditMesinMulai$ ./index1.php?p=Edit_Mesin_Mulai [L]
 RewriteRule ^EditMesinBerhenti$ ./index1.php?p=Edit_Mesin_Berhenti [L]
 RewriteRule ^UbahKainTerima$ ./index1.php?p=Edit_Kain_Terima [L]
