Final Status Test Quality

--- a/.htaccess
+++ b/.htaccess
@@ -378,6 +378,7 @@ RewriteRule ^SummaryTQAftersalesPO$ ./index1.php?p=SummaryTQ-AftersalesPO [L]
 RewriteRule ^SummaryTQAftersalesPO-$ ./index1.php?p=SummaryTQ-AftersalesPO [L]
 RewriteRule ^SummaryTQAftersalesPO-([a-zA-Z0-9_\ \&\-]+)$ ./index1.php?p=SummaryTQ-AftersalesPO&no_po=$1 [L]
 RewriteRule ^SummaryTQAftersalesNoTest$ ./index1.php?p=SummaryTQ-AftersalesNoTest [L]
+RewriteRule ^SummaryTQAftersalesNoTest-([a-zA-Z0-9_\ \&\-]+)$ ./index1.php?p=SummaryTQ-AftersalesNoTest&no_test=$1 [L]
 RewriteRule ^LapKainKeluar$ ./index1.php?p=Lap-Kain-Keluar [L]
 RewriteRule ^SummaryInspeksi$ ./index1.php?p=Summary-Inspeksi [L]
 RewriteRule ^SummaryInspectPacking$ ./index1.php?p=Summary-Inspect-Packing [L]
